<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_suggestion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ritssupreme.phlurtyz002.activity.SuggestionActivity">

    <include layout="@layout/app_bar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/screen_app_bar">

        <TextView
            android:id="@+id/suggestion_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/font_extra_large"
            android:text="@string/suggetst_flirtyz"/>

        <TextView
            android:id="@+id/suggestion_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="16dp"
            android:paddingLeft="@dimen/spacing_huge"
            android:paddingRight="@dimen/spacing_huge"
            android:text="@string/sugesstion_description"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@android:color/black">

                <TextView
                    android:id="@+id/idea_box_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:gravity="left"
                    android:text="@string/suggestion_idea_box"/>

                <EditText
                    android:id="@+id/idea_box"
                    android:layout_width="match_parent"
                    android:layout_height="73dp"
                    android:padding="10dp"
                    android:background="@android:color/white"/>

                <Button
                    android:id="@+id/send_suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/bright_sun"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:padding="@dimen/spacing_small"
                    android:text="@string/suggestion_send"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
