<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ritssupreme.phlurtyz002.activity.DownloadActivity"
    tools:showIn="@layout/activity_download">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <ProgressBar
            android:id="@+id/download_progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:padding="1dp"
            android:text="@string/download_descriptionnew"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:padding="1dp"
            android:text="@string/download_descriptiondirection"
            android:textSize="12sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--            <ImageView-->

            <!--                android:src="@drawable/flirtyzpaid"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="200dp"-->
            <!--                android:layout_marginTop="@dimen/spacing_huge"/>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_huge"
                android:orientation="vertical"
                android:padding="24dp">

                <Button
                    android:id="@+id/download_download"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="@dimen/spacing_normal"
                    android:background="@color/paid_primary"
                    android:text="@string/download_download"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/download_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@color/bright_sun"
                    android:text="@string/download_cancel" />


            </LinearLayout>

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/spacing_huge"
                android:src="@drawable/flirtyzpaid" />


        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
