<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.ritssupreme.phlurtyz002.activity.WelcomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/welcome_screen_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:elevation="4dp"
            app:title="@string/flirtyz_emojicons"
            app:titleTextColor="@color/white"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:id="@+id/welcome_screen_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_screen_app_bar"
        android:padding="@dimen/spacing_normal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/font_extra_large" />

            <TextView
                android:id="@+id/select_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textColor="@color/mine_shaft"
                android:textSize="@dimen/font_normal" />


            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="@dimen/large_rectangle"

                android:layout_marginTop="@dimen/spacing_large"
                android:background="@drawable/backgrounwithuparrow">

                <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/spacing_small">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/spacing_normal">

                        <RelativeLayout

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:background="@color/supernova"
                            android:padding="5dp">


                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="18dp"
                                android:gravity="right"

                                android:textSize="@dimen/font_large" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textView2"
                                android:layout_alignStart="@+id/textView2" />


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textView5"
                                android:layout_alignParentStart="true"
                                android:orientation="vertical">

                                <include layout="@layout/white_line_separator" />

                                <TextView
                                    android:id="@+id/textView6"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/welcome_a_humble_request_description_free2"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/textView7"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="90dp"
                                    android:text="@string/welcome_a_humble_request_description_free3"
                                    android:textSize="12sp" />


                            </LinearLayout>


                        </RelativeLayout>


                    </RelativeLayout>


<!--                    <TextView-->
<!--                        android:id="@+id/free_versionoo"-->
<!--                        android:layout_width="200dp"-->
<!--                        android:layout_height="wrap_content"-->

<!--                        android:layout_marginTop="@dimen/spacing_small"-->
<!--                        android:background="@color/bright_sun"-->
<!--                        android:elevation="4dp"-->
<!--                        android:padding="@dimen/spacing_tiny"-->
<!--                        android:text="@string/free_version"-->
<!--                        android:textAlignment="center"-->
<!--                        android:textColor="#ffffffff"-->
<!--                        android:textSize="@dimen/font_very_large" />-->
                    <TextView
                        android:id="@+id/fre"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="@dimen/spacing_small"

                        android:elevation="4dp"
                        android:layout_marginLeft="90dp"
                        android:text="Flirtyz"

                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="@dimen/font_very_largee" />

                    <TextView
                        android:id="@+id/fr"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="55dp"
                        android:layout_marginLeft="90dp"

                        android:elevation="4dp"

                        android:text="Welcome to Flirtyz"

                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/free_version"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="230dp"
                        android:background="@color/bright_sun"
                        android:elevation="4dp"
                        android:padding="@dimen/spacing_tiny"
                        android:text="@string/free_version"
                        android:textAlignment="center"
                        android:textColor="#ffffffff"
                        android:textSize="@dimen/font_very_large" />


                </FrameLayout>
            </RelativeLayout>




        </LinearLayout>

    </ScrollView>

</RelativeLayout>

